feat: cambios en el UI

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
 }
 
 html {
-  scroll-behavior: smooth;
   scroll-padding-top: 75px;
 }
 
@@ -353,6 +352,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Skills Css ************/
+#skills {
+  scroll-margin-top: 200px;
+}
+
+#project {
+  scroll-margin-top: 200px;
+}
+
 .skill {
   padding: 0 0 50px 0;
   position: relative;
@@ -364,6 +371,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
+  position: relative;
 }
 
 .skill h2 {
@@ -379,15 +387,75 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin: 14px 0 75px 0;
 }
 
-.skill-slider {
+/* Embla Carousel Styles */
+.embla {
+  overflow: hidden;
   width: 80%;
   margin: 0 auto;
   position: relative;
 }
 
-.skill-slider .item img {
+.embla__prev,
+.embla__next {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+  background: transparent;
+}
+
+.embla__prev:hover,
+.embla__next:hover {
+  opacity: 1;
+}
+
+.embla__prev {
+  left: 3%;
+}
+
+.embla__next {
+  right: 3%;
+}
+
+.embla__container {
+  display: flex;
+}
+
+.embla__slide {
+  flex: 0 0 33%;
+  /* Show 3 items by default */
+  min-width: 0;
+  padding-right: 20px;
+}
+
+.skill-slider .item img,
+.embla__slide .item img {
   width: 50%;
   margin: 0 auto 15px auto;
+}
+
+/* Mobile responsive for Embla */
+@media (max-width: 768px) {
+  .embla__slide {
+    flex: 0 0 50%;
+    /* Show 2 items on tablet */
+  }
+}
+
+@media (max-width: 576px) {
+  .embla__slide {
+    flex: 0 0 100%;
+    /* Show 1 item on mobile */
+  }
 }
 
 .background-image-left {
